[package]
name = "garaga-noir-backend"
version = "0.1.0"
edition = "2024"
description = "Build Garaga calldata for a Noir proof."

[dependencies]
axum = "0.8"
tokio = { version = "1.45", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
